# agentic-stocks-analyst

./: README.md
backend/: .env-example  API_ENDPOINTS.md  README.md  app.py  pyproject.toml
backend/knowledge/: popular_tickers.json  user_preference.txt
backend/src/multi_agent_stock_analyst/: crew.py  flow.py  models.py  utils.py
backend/src/multi_agent_stock_analyst/config/: agents.yaml  tasks.yaml
backend/src/multi_agent_stock_analyst/tools/: custom_tool.py  human_tool.py  mcp_server.py
frontend/: README.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: analyzeSession.ts  autocomplete.ts  preferences.ts  quote.ts  tickers.ts
frontend/src/lib/: backendUrl.ts  randomId.ts
frontend/src/types/: agent.ts  quote.ts  tickers.ts
